// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can fetch books by shelf 1`] = `
Object {
  "bookShelf": Object {
    "__typename": "BookShelf",
    "items": Object {
      "__typename": "BookPage",
      "items": Array [
        Object {
          "__typename": "Book",
          "title": "The Damned Utd",
        },
      ],
    },
    "name": "Reading",
  },
}
`;

exports[`can fetch second page of books 1`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "The Damned Utd",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoxLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmQ0YTlhNzBkLTIwMTktNDkwOS04Njk3LTE2Mjk3MDU2ZGE5NiIsIm1vdmVkQXQ6dHlwZTppZCI6IjE2Mjg0MjAxNDgyMzU6Qm9vazpkNGE5YTcwZC0yMDE5LTQ5MDktODY5Ny0xNjI5NzA1NmRhOTYiLCJ0eXBlIjoiQm9vayJ9fQ==",
  },
}
`;

exports[`can fetch second page of books 2`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "sfamq",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoyLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmE2NjY4NzA3LTEzZmMtNDBjMi1iOGMyLTFiMjBlMGI5YTg0YyIsIm1vdmVkQXQ6dHlwZTppZCI6IjE2Mjg0MTk1MTgxMDc6Qm9vazphNjY2ODcwNy0xM2ZjLTQwYzItYjhjMi0xYjIwZTBiOWE4NGMiLCJ0eXBlIjoiQm9vayJ9fQ==",
  },
}
`;

exports[`can import external book 1`] = `
Object {
  "importExternalBook": Object {
    "__typename": "Book",
    "author": "David Peace",
    "externalId": "googlebooks:CkVF9cg8daMC",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can query single book 1`] = `
Object {
  "book": Object {
    "__typename": "Book",
    "author": "David Peace",
    "id": Any<String>,
    "rating": null,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
      "name": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can search for external books 1`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 2`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 3`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 4`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 5`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 6`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 7`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 8`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 9`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 10`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;
